Renamed Resume to Resume.pdf and updated the link in index.html

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </p>
 
         <!-- Resume Download Button -->
-        <a href="assets/Majith_Resume.pdf" class="btn resume-btn mt-4" download>
+        <a href="assets/Resume.pdf" class="btn resume-btn mt-4" download>
           <i class="fas fa-download"></i> Download Resume
         </a>
       </div>
